add patient chart details